--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -4,7 +4,7 @@
     </div>
     <div class="info">
         <div class="n_em">
-            <p>Emplyees:</p><div class="employee_amount">{{ count }}</div>
+            <p>Employees:</p><div class="employee_amount">{{ count }}</div>
         </div>
     </div>
 </div>
