--- a/FrontEnd/static/styles/dashboardStyle/dashMenu.css
+++ b/FrontEnd/static/styles/dashboardStyle/dashMenu.css
@@ -14,120 +14,204 @@
 /* Mixin font-size and weight for ConTime Logo */
 /* input box background and border */
 /* Flex Center Mixin */
-.dashboard {
-  background: #CC4100;
-  width: 100px;
-  height: calc(100vh - 47px);
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media only screen and (min-width: 850px) {
+  .dashboard {
+    background: #CC4100;
+    min-width: 100px;
+    height: calc(100vh - 47px);
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #pic_frame {
+    width: 100px;
+    height: 100px;
+    background: white;
+    border-radius: 50%;
+    margin-top: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  #pic_frame #pic {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+  }
+  #pic_frame #picture {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+  }
+  #name {
+    font-size: 20px;
+    font-weight: 500;
+    color: white;
+  }
+  .choices {
+    position: fixed;
+    top: 30%;
+    height: 220px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .choices .choice {
+    width: 100px;
+    height: 45px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .choices .choice:hover {
+    background: #AD1E15;
+    opacity: 70%;
+  }
+  .choices .cor {
+    background: #AD1E15;
+    opacity: 70%;
+  }
+  .choices a {
+    text-decoration: none;
+  }
+  .choices .iconImg {
+    height: 35px;
+    width: 35px;
+  }
+  #logout {
+    position: fixed;
+    bottom: 15px;
+  }
 }
 
-#pic_frame {
-  width: 100px;
-  height: 100px;
-  background: white;
-  border-radius: 50%;
-  margin-top: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-#pic_frame #pic {
-  width: 130px;
-  height: 130px;
-  border-radius: 50%;
-}
-
-#pic_frame #picture {
-  width: 130px;
-  height: 130px;
-  border-radius: 50%;
-}
-
-#name {
-  font-size: 20px;
-  font-weight: 500;
-  color: white;
-}
-
-.choices {
-  position: fixed;
-  top: 30%;
-  height: 220px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.choices .choice {
-  width: 100px;
-  height: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.choices .choice:hover {
-  background: #AD1E15;
-  opacity: 70%;
-}
-
-.choices a {
-  text-decoration: none;
-}
-
-.choices .iconImg {
-  height: 35px;
-  width: 35px;
-}
-
-#logout {
-  position: fixed;
-  bottom: 30px;
+@media only screen and (max-width: 849px) {
+  .dashboard {
+    background: #CC4100;
+    min-width: 100%;
+    height: 45px;
+    position: fixed;
+    left: 0;
+    top: 47px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
+            box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1);
+  }
+  .dashboard .choices {
+    position: absolute;
+    top: 0;
+    height: 45px;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .dashboard .choices .choice {
+    width: 80px;
+    height: 45px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .dashboard .choices .choice:hover {
+    background: #AD1E15;
+    opacity: 70%;
+  }
+  .dashboard .choices .cor {
+    background: #AD1E15;
+    opacity: 70%;
+  }
+  .dashboard .choices a {
+    text-decoration: none;
+  }
+  .dashboard .choices .iconImg {
+    height: 35px;
+    width: 35px;
+  }
+  .dashboard .choices .iconImg {
+    height: 25px;
+    width: 25px;
+  }
+  .dashboard .choices #logout {
+    position: fixed;
+    right: 0;
+  }
 }
 /*# sourceMappingURL=dashMenu.css.map */
