--- a/FrontEnd/static/styles/dashboardStyle/profile.css
+++ b/FrontEnd/static/styles/dashboardStyle/profile.css
@@ -15,11 +15,9 @@
 /* input box background and border */
 /* Flex Center Mixin */
 .profile-container {
-  width: calc(100% - 240px);
+  width: 100%;
   height: 50px;
-  position: fixed;
-  top: 57px;
-  left: 200px;
+  margin-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -101,5 +99,49 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+}
+
+@media only screen and (max-width: 750px) {
+  .profile-container {
+    width: 100%;
+    height: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .profile-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 65px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .profile-container .info {
+    width: 80%;
+  }
 }
 /*# sourceMappingURL=profile.css.map */
