--- a/FrontEnd/static/styles/dashboardStyle/profile.scss
+++ b/FrontEnd/static/styles/dashboardStyle/profile.scss
@@ -1,12 +1,9 @@
 @import "../loginStyle/variablesMixin";
 
 .profile-container {
-    width: calc(100% - 240px);
+    width: 100%;
     height: 50px;
-    position: fixed;
-    top: 57px;
-    left: 200px;
-    // border: 1px solid green;
+    margin-top: 20px;
     @include flexCenter(row);
 
     .info {
@@ -35,6 +32,26 @@
             background: orange;
             border-radius: 2px;
             @include flexCenter(row);
+        }
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .profile-container {
+        width: 100%;
+        height: 50px;
+        @include flexCenter(row);
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .profile-container {
+        @include flexCenter(column);
+        height: 65px;
+        justify-content: space-around;
+
+        .info {
+            width: 80%;
         }
     }
 }
