--- a/FrontEnd/static/styles/dashboardStyle/employees.scss
+++ b/FrontEnd/static/styles/dashboardStyle/employees.scss
@@ -6,7 +6,6 @@ is_off {
 
 @media only screen and (min-width: 650px) {
     .add_employees {
-        display: none;
         width: calc(100% - 200px);
         @include flexCenter(row);
         height: 100px;
@@ -36,6 +35,45 @@ is_off {
     }
 }
 
+.form_add {
+    background: #67d380;
+    border: none;
+    border-radius: 2.5px;
+    height: 40px;
+    width: 65%;
+    margin: 20px 0 20px 0;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+    &:focus {
+        outline: none !important;
+    }
+
+    &:hover {
+        cursor: pointer;
+        opacity: 80%;
+    }
+}
+
+.form_hide {
+    background: orange;
+    border: none;
+    border-radius: 2.5px;
+    height: 50px;
+    width: 65%;
+    margin: 20px 0 20px 0;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+    &:focus {
+        outline: none !important;
+    }
+
+    &:hover {
+        cursor: pointer;
+        opacity: 80%;
+    }
+}
 
 .em_input {
     @include inputBox(rgba(196, 196, 196, 0.2));
@@ -61,7 +99,6 @@ is_off {
     flex-wrap: wrap;
     justify-content: center;
     box-sizing: border-box;
-    overflow: scroll;
 
     .cardBtn {
         width: 100%;
@@ -102,7 +139,6 @@ is_off {
             height: 25px;
             @include flexCenter(row);
             border-radius: 2.5px;
-            overflow: scroll;
             font-size: 12.5;
 
         }
@@ -114,7 +150,6 @@ is_off {
             border-radius: 2.5px;
             font-size: 12.5px;
             color: white;
-            overflow: scroll;
         }
 
         .i_d {
@@ -125,7 +160,6 @@ is_off {
             @include flexCenter(row);
             margin-right: 5px;
             font-size: 8px;
-            overflow: scroll;
 
         }
 
@@ -137,7 +171,6 @@ is_off {
             @include flexCenter(row);
             margin-right: 5px;
             font-size: 8px;
-            overflow: scroll;
 
         }
 
@@ -149,7 +182,6 @@ is_off {
             border-radius: 2.5px;
             font-size: 8px;
             color: white;
-            overflow: scroll;
 
             input {
                 background: none;
@@ -167,7 +199,6 @@ is_off {
             border-radius: 2.5px;
             font-size: 11px;
             color: white;
-            overflow: scroll;
 
         }
 
@@ -238,12 +269,13 @@ is_off {
 
 @media only screen and (max-width: 650px) {
     .add_employees {
-        display: none;
-        // @include flexCenter(column);
-        // justify-content: space-around;
-        height: 200px;
-        overflow: scroll;
+        // display: none;
+        @include flexCenter(column);
+        justify-content: space-around;
+        height: 300px;
+        width: 100%;
         border-bottom: 1px solid rgba(0,0,0,0.05);
+        padding-bottom: 20px;
     
         .add_employee {
             min-width: 200px;
@@ -287,7 +319,6 @@ is_off {
     .employees {
         width: 100%;
         height: 70%;
-        overflow: auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
