--- a/FrontEnd/templates/appLayout.html
+++ b/FrontEnd/templates/appLayout.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/topMenu.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/profile.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/employees.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboardStyle/profileInfo.css') }}">
     <SCRIPT src="https://code.jquery.com/jquery-3.2.1.min.js"></SCRIPT>
 
     {% if title %}
@@ -32,5 +33,7 @@
     </div>
 
     <script src="{{ url_for('static', filename='JS/dashboard.js') }}"></script>
+
+    <footer></footer>
 </body>
 </html>
