--- a/FrontEnd/templates/dashboard.html
+++ b/FrontEnd/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'appLayout.html' %}
 {% block dashboard %}
-    <div style="height: 300px; width: 300px; background: blue; position: absolute; bottom: 10px;">
+    <div style="">
         dashboard
     </div>
 {% endblock dashboard %}
