--- a/FrontEnd/templates/employees.html
+++ b/FrontEnd/templates/employees.html
@@ -51,6 +51,7 @@
             </div>
         {% endfor %}
     </div>
+    <div class="ok"></div>
 {% endblock employees %}
 
 <!-- <div class="check_for_del">
