--- a/FrontEnd/static/styles/loginStyle/_formContainer.scss
+++ b/FrontEnd/static/styles/loginStyle/_formContainer.scss
@@ -23,6 +23,10 @@
             opacity: 70%;
         }
 
+        .flash-bye {
+            @include flash_msg(orange);
+        }
+
         h1 {
             color: $timeLogin;
             font-size: 40px;
